--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <script src="https://d3js.org/d3.v7.min.js"></script>  
     </head>
 
-    <body>\
+    <body>
         <h1>Hello WOrld!</h1>
         <div id="viz"></div>
-        <script>src="firstViz.js" </script>"
+        <script>src="firstViz.js" </script>
     </body>
 </html>
