--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Hello WOrld!</h1>
+        <h1>Hello WOrldaaa!</h1>
         <div id="viz"></div>
         <script>src="firstViz.js" </script>
     </body>
